feat: 实现ClickHouse定时任务日志完整功能并修复包名问题
ClickHouse定时任务日志新功能:
* 新增SJobLogClickHouseEntity: 完整的s_job_log表实体类，包含30个字段
* 新增SJobLogClickHouseVo: 支持分页查询的VO类，包含查询条件和时间范围
* 新增SJobLogClickHouseRepository: 高性能仓储层，支持参数化查询和批量操作
* 新增SJobLogClickHouseService: 业务服务层，支持异步插入和多种查询方式
* 更新clickhouse_tables.sql: 添加s_job_log表结构和性能优化索引

技术改进:
* 修复ClickHouse Client API使用错误：getInt() -> getInteger()
* 统一包名：com.xinyirunscm -> com.xinyirun.scm
* 重命名AI相关类：AiXxx -> AIXxx保持命名一致性
* 清理MongoDB备份相关的过期代码和控制器

数据库优化:
* s_job_log表使用MergeTree引擎，按月分区
* 创建4个高效索引：job_id, job_name, class_name, method_name
* 支持租户隔离和高并发写入场景
* 兼容从MongoDB迁移的完整字段映射